app/src/test/resources/programs/valid/conditionals/ifWithElse.exe
// 'if' with 'else', both blocks are complex
foo main() -> Int = {
    let y: Int = if 5 > 3 then {
        let a: Int = 10;
        a + 5
    } else {
        let b: Int = 20;
        b - 5
    }
    y
}
