app/src/test/resources/programs/invalid/blocks/outofscope.exe
foo main() -> Int = {
    let mut a:Int;
    let mut b:Int;
    let mut c:Int;
    let mut d:Int;
    /**/
    {
        Int i = a;
        if(b>i)then{
            i=b;
        }
        i=i+1;
        c=i;
    };
    d=i+1;
}